Fix visibility not sorting correctly.

--- a/src/components/FilterAnnotModal/FilterAnnotModal.scss
+++ b/src/components/FilterAnnotModal/FilterAnnotModal.scss
@@ -316,4 +316,8 @@ span.react-datepicker__year-read-view--selected-year {
     color: transparent;
 }
 
+.react-datepicker__year-option {
+    color: black;
+}
+
 //customization
